# nine-grids-shogi-analyzer

./: .gitignore  .travis.yml  Cargo.toml  README.md
.github/workflows/: automerge.yml  test.yml
benches/: redis.rs
src/: Board.rs  BoardMap.rs  Grid.rs  Piece.rs  lib.rs  main.rs  util.rs
tests/: Board.rs  BoardMap.rs  util.rs
