cargo-features = ["edition2021"]

[package]
name = "nine-grids-shogi-analyzer"
version = "1.0.0"
authors = ["Koki Takahashi <hakatasiloving@gmail.com>"]

[dependencies]
fnv = "1.0.7"
integer-sqrt = "0.1.5"
redis = "0.25.4"

[dependencies.rusqlite]
version = "0.37.0"
features = ["bundled"]

[profile.bench]
opt-level = 3
